--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src//assets/mahatari_header.jpg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./src//assets/mahatari_header.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>महतारी वंदन योजना </title>
+    <title>Report</title>
   </head>
   <body>
     <div id="root"></div>
